@@ -1,6 +1,6 @@
 % Test script for Born-Markov methods.
 
-% Ville Bergholm 2009-2015
+% Ville Bergholm 2009-2017
 
 tol = qit.tol;
 
@@ -12,20 +12,6 @@ H = rand_hermitian(dim);
 D = {rand_hermitian(dim)/10, rand_hermitian(dim)/10};
 baths = {markov.bath('ohmic', 'boson', TU, 0.02),...
          markov.bath('ohmic', 'fermion', TU, 0.03)};
-
-% jump operators
-[dH, A] = markov.ops(H, D);
-
-for n=1:length(D)
-  temp = 0;
-  for k=1:length(dH)
-      temp = temp +A{n,k};
-      if dH(k) ~= 0
-          temp = temp +A{n,k}'; % A(-omega) == A'(omega)
-      end
-  end
-  assert_o(norm(temp - D{n}), 0, tol); % Lindblad ops should sum to D
-end
 
 
 % equivalence of Lindblad operators and the Liouvillian superoperator
