@@ -6,7 +6,7 @@ function [a, P] = spectral_decomposition(A, do_sort)
 %  for the Hermitian matrix A, such that  A = \sum_k a_k P_k.
 %  If sort is true, the eigenvalues are sorted in ascending order.
 
-% Ville Bergholm 2010-2013
+% Ville Bergholm 2010-2017
 
 
 global qit
@@ -21,14 +21,14 @@ end
 
 % combine projectors for degenerate eigenvalues
 s = 1;
-a(1) = d(1);
+a(1,1) = d(1);
 P{1} = v(:,1)*v(:,1)';
 
 for k = 2:length(d)
   if (abs(d(k) - d(k-1)) > qit.tol)
     % new eigenvalue, new projector
     s = s+1;
-    a(s) = d(k);
+    a(s,1) = d(k);
     P{s} = v(:,k)*v(:,k)';
   else
     % extend current P
