@@ -1,5 +1,5 @@
 % Test script for the Quantum Information Toolkit utilities
-% Ville Bergholm 2009-2016
+% Ville Bergholm 2009-2017
 
 tol = qit.tol;
 
@@ -61,6 +61,24 @@ for k=1:length(E)
   temp = temp + E(k)*P{k};
 end
 assert_o(norm(temp-H), 0, tol);
+
+
+%% rotating frame
+
+D = rand_hermitian(dim);
+
+[dH, A] = rotating_frame(H, D);
+assert(length(dH) == size(A, 1));
+assert_o(dH(1), 0, tol);  % first dH is always zero
+
+t = randn(); % random time
+temp = A{1};
+for k=2:length(dH)
+    x = exp(-1i*dH(k)*t) * A{k};
+    temp = temp +x+x';
+end
+U0 = expm(1i*H*t);  % rotation generated by H
+assert_o(norm(temp-U0*D*U0'), 0, tol);
 
 
 %% tensorsum
